# stim-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/qa/2026-03-22/modularize-generate-circuit/: report.md
docs/qa/2026-03-23/circuit-id-privacy/: report.md
src/stim_mcp_server/: __init__.py  analytics.py  circuit_store.py  cleanup.py  resources.py  server.py
src/stim_mcp_server/tools/: analysis.py  circuit_management.py  health.py  simulation.py  visualization.py
tests/: test_server.py
